--- a/package.json
+++ b/package.json
@@ -28,14 +28,20 @@
     "babel-polyfill": "6.16.0",
     "bootstrap": "3.3.7",
     "jquery": "3.1.1",
+    "material-ui": "^0.16.0",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-redux": "4.4.5",
     "react-router": "2.8.1",
     "react-router-redux": "4.0.6",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
-    "toastr": "2.1.2"
+    "toastr": "2.1.2",
+    "promise": "^7.1.1",
+    "promise-file-reader": "^0.3.0",
+    "superagent": "^2.3.0",
+    "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.0",
