--- a/package.json
+++ b/package.json
@@ -28,20 +28,48 @@
     "babel-polyfill": "6.16.0",
     "bootstrap": "3.3.7",
     "jquery": "3.1.1",
-    "material-ui": "^0.16.0",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
-    "react-redux": "4.4.5",
-    "react-router": "2.8.1",
-    "react-router-redux": "4.0.6",
-    "react-tap-event-plugin": "^1.0.0",
-    "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "toastr": "2.1.2",
+    "axios": "^0.14.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.11.6",
+    "better-npm-run": "0.0.11",
+    "css-loader": "^0.25.0",
+    "cssnano": "^3.7.4",
+    "debug": "^2.2.0",
+    "extract-text-webpack-plugin": "^1.0.0",
+    "file-loader": "^0.9.0",
+    "fs-extra": "^0.30.0",
+    "html-webpack-plugin": "^2.22.0",
+    "imports-loader": "^0.6.5",
+    "ip": "^1.1.2",
+    "json-loader": "^0.5.4",
+    "jsonlint": "^1.6.2",
+    "material-ui": "^0.15.4",
+    "node-sass": "^3.7.0",
+    "normalize.css": "^4.1.1",
+    "postcss-loader": "^0.13.0",
     "promise": "^7.1.1",
     "promise-file-reader": "^0.3.0",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "react-dropzone": "^3.6.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.0",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.0.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "superagent": "^2.3.0",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.14",
+    "yargs": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.0",
