--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
   "author": "Kwakes Prempeh",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "6.16.0",
-    "bootstrap": "3.3.7",
-    "jquery": "3.1.1",
     "axios": "^0.14.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^6.11.6",
     "better-npm-run": "0.0.11",
+    "bootstrap": "3.3.7",
     "css-loader": "^0.25.0",
     "cssnano": "^3.7.4",
     "debug": "^2.2.0",
@@ -46,8 +45,10 @@
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
+    "jquery": "3.1.1",
     "json-loader": "^0.5.4",
     "jsonlint": "^1.6.2",
+    "lodash": "^4.16.3",
     "material-ui": "^0.15.4",
     "node-sass": "^3.7.0",
     "normalize.css": "^4.1.1",
