--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pluralsight-redux-starter",
+  "name": "rimmel",
   "version": "0.1.0",
   "engines": {
     "npm": ">=3"
@@ -70,7 +70,8 @@
     "superagent-promise": "^1.1.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
-    "yargs": "^5.0.0"
+    "yargs": "^5.0.0",
+    "toastr": "2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "6.5.0",
